objects/Account.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag field, which will indicate if this account record is already processed or not</description>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountOwnerFullName__c</fullName>
        <description>Full name of Account Owner</description>
        <formula>Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ActionPlan__c</fullName>
        <description>Action Plan for addressing the Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AddressDistrict__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AddressNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If there is no number, fill in the text “SN”</inlineHelpText>
        <label>Address Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Address_Coordinates__c</fullName>
        <description>Geolocation Coordinates for this Account&apos;s Address</description>
        <label>Address Coordinates</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AdvancedAccountForecastSetUse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up field to help the user navigate to forecast set use record.</description>
        <label>Advanced Account Forecast Set Use</label>
        <referenceTo>AdvAcctForecastSetUse</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AgentCode__c</fullName>
        <description>Code for Agent Type Accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What is the Agent related to this Account?</description>
        <inlineHelpText>What is the Agent related to this Account?</inlineHelpText>
        <label>Agent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an Agent Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PMC_SS_Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look-up field on the Sold-to Account that is looking up to the Bill-to Account</description>
        <label>Bill-to Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Bill-to</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold-tos</relationshipLabel>
        <relationshipName>Sold_tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_BuyerVisa__c</fullName>
        <description>Brazilian Buyer Visa</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Buyer Visa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CIFScript__c</fullName>
        <description>States the CIF Script</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CIF Script</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CPF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID or CPF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Careof__c</fullName>
        <description>Search Term</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Care of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Channel__c</fullName>
        <description>Channels to which the Account belongs in.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture/Fertilizer</fullName>
                </value>
                <value>
                    <fullName>Cooperative</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>End-Users</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>International Sales</fullName>
                </value>
                <value>
                    <fullName>Retailers</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
                <value>
                    <fullName>Specialty/Co-Products</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                    <isActive>false</isActive>
                    <label>Basic</label>
                </value>
                <value>
                    <fullName>Grow</fullName>
                    <isActive>false</isActive>
                    <label>Grow</label>
                </value>
                <value>
                    <fullName>Prime</fullName>
                    <isActive>false</isActive>
                    <label>Prime</label>
                </value>
                <value>
                    <fullName>Resellers</fullName>
                    <isActive>false</isActive>
                    <label>Resellers</label>
                </value>
                <value>
                    <fullName>Ultra</fullName>
                    <isActive>false</isActive>
                    <label>Ultra</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CityState__c</fullName>
        <formula>BillingCity &amp; &quot;, &quot; &amp;  BillingState</formula>
        <label>City, State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ClientCode__c</fullName>
        <description>States the Client Code Number</description>
        <label>Client Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ClientDenied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States if Client is on Denied List</description>
        <label>Client Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ClientGroup__c</fullName>
        <description>States the Client Group the Account belongs to</description>
        <label>Client Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pool de Compra</fullName>
                </value>
                <value>
                    <fullName>Top Cooperativa</fullName>
                </value>
                <value>
                    <fullName>Top Revenda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CompanyCode__c</fullName>
        <description>Field for the Company Code</description>
        <label>Company Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1002</fullName>
                    <label>1002 - Mosaic Global Sales LLC</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>1003 - Mosaic Crop Nutrition LLC</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>1004 - Mosaic Fertilizer LLC</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>1005 - Mosaic Potash Carlsbad</label>
                </value>
                <value>
                    <fullName>1025</fullName>
                    <label>1025 - Tampa Port Services LLC</label>
                </value>
                <value>
                    <fullName>1026</fullName>
                    <label>1026 - MOS Ag Innovation Sol LLC</label>
                </value>
                <value>
                    <fullName>1030</fullName>
                    <label>1030 - Gulf Sulphur Service, LTD</label>
                </value>
                <value>
                    <fullName>1310</fullName>
                    <label>1310 - Company Code CN</label>
                </value>
                <value>
                    <fullName>1410</fullName>
                    <label>1410 - Company Code BR</label>
                </value>
                <value>
                    <fullName>1710</fullName>
                    <label>1710 - Company Code US</label>
                </value>
                <value>
                    <fullName>1810</fullName>
                    <label>1810 - Company Code IN</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <label>2000 - Mosaic CAN Crop Nutr LP</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <label>2001 - Mosaic Potash COL ULC</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <label>2002 - Mosaic Potash EST LP</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <label>2003 - Mosaic Canada ULC (BP)</label>
                </value>
                <value>
                    <fullName>2910</fullName>
                    <label>2910 - Company Code CA</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>4000 - Mosaic Fert Brasil Ltda</label>
                </value>
                <value>
                    <fullName>4001</fullName>
                    <label>4001 - Fospar SA</label>
                </value>
                <value>
                    <fullName>4004</fullName>
                    <label>4004 - Mosaic Potássio Mineração</label>
                </value>
                <value>
                    <fullName>4005</fullName>
                    <label>4005 - Mosaic Fert P&amp;K Ltda</label>
                </value>
                <value>
                    <fullName>4600</fullName>
                    <label>4600 - Mosaic Fert Bahamas Ltd</label>
                </value>
                <value>
                    <fullName>4620</fullName>
                    <label>4620 - Mosaic Fert Paraguay SRL</label>
                </value>
                <value>
                    <fullName>4680</fullName>
                    <label>4680 - Co Minera Miski Mayo SRL</label>
                </value>
                <value>
                    <fullName>6000</fullName>
                    <isActive>false</isActive>
                    <label>Mosaic Fert QMF</label>
                </value>
                <value>
                    <fullName>6001</fullName>
                    <isActive>false</isActive>
                    <label>Mosaic Fert YMF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ContractLanguage__c</fullName>
        <description>States the Contract Language</description>
        <label>Contract Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CounterpartyContact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Counterparty Contact Record</description>
        <label>Counterparty Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Counterparty Contact 2)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CounterpartyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Counterparty Contact Record</description>
        <label>Counterparty Contact </label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CountyCode__c</fullName>
        <description>States the country code. This information will be provided by the MDM team</description>
        <encryptionScheme>None</encryptionScheme>
        <label>County Code (US Sold-to only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CreditExpirationDate__c</fullName>
        <description>Date Credit expires, derived from SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CreditLimit__c</fullName>
        <description>This field will be use store the credit limit amount</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Crops__c</fullName>
        <description>Crops Account Grows</description>
        <label>Crops</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_Crops</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerCreditAmount__c</fullName>
        <description>Amount of Credit this customer has</description>
        <label>Customer Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerType__c</fullName>
        <description>B2C vs B2B</description>
        <label>Person or Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Division__c</fullName>
        <inlineHelpText>For domestic sales, select “Domestic”. For international sales, select “Export”. For transfers between centers or warehouses, select “Intercompany”.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Intercompany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_FioriLink__c</fullName>
        <formula>HYPERLINK($Label.PMC_SS_AccountDispute_FioriLinks,&apos;Account Dispute Fiori Link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiori Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_GLN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GLN Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HQ of the Account</description>
        <label>HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_HierarchyApprovalStatus__c</fullName>
        <description>This field is used to track Hierarchy Approval Status</description>
        <label>Hierarchy Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Account Approved</fullName>
                </value>
                <value>
                    <fullName>Account Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_LastInteractionDate__c</fullName>
        <description>Last date of activity on related records</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Interaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LinkCommissionsAgent__c</fullName>
        <description>States the commission agent for the Account</description>
        <label>Link a Commissions Agent - sold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4001629 - Buffalo-Warren Company LLC</fullName>
                </value>
                <value>
                    <fullName>4001632 - Cerne Calucium Company</fullName>
                </value>
                <value>
                    <fullName>4002905 - Progression Agro Trade Co</fullName>
                </value>
                <value>
                    <fullName>4008572 - Terramecan S.A.</fullName>
                </value>
                <value>
                    <fullName>4008593 - Serv Fertil S.C.</fullName>
                </value>
                <value>
                    <fullName>4062464 - Global Value Sales SRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Lockbox__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>US &amp; CA - by Postal Code</inlineHelpText>
        <label>Lockbox</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MDMSyncStatus__c</fullName>
        <description>States the Sync Status with MDM system</description>
        <label>MDM Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_MDMVerified__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Details whether an Account has been Verified by MDM Team</description>
        <label>MDM Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_MunicipalTaxNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Municipal Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Name2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Name4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name 4</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Offerings__c</fullName>
        <description>Picklist of Offerings dependent on Segmentation</description>
        <label>Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PMC_SS_Segmentation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Complaint Resolution - &lt; 15 days</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution - &lt; 20 days</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution - &lt;30 days</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution - &lt; 30 days</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution - &lt; 45 days</fullName>
                </value>
                <value>
                    <fullName>Contracts / BPAs - Custom</fullName>
                </value>
                <value>
                    <fullName>Contracts / BPAs - Custom Offered</fullName>
                </value>
                <value>
                    <fullName>Contracts / BPAs - None</fullName>
                </value>
                <value>
                    <fullName>Contracts / BPAs - Standard</fullName>
                </value>
                <value>
                    <fullName>Dedicated Account Management - Account Team</fullName>
                </value>
                <value>
                    <fullName>Dedicated Account Management - Dedicated</fullName>
                </value>
                <value>
                    <fullName>Dedicated Account Management - Select</fullName>
                </value>
                <value>
                    <fullName>Dedicated Account Management - Shared</fullName>
                </value>
                <value>
                    <fullName>Dedicated Customer Service - Dedicated</fullName>
                </value>
                <value>
                    <fullName>Dedicated Customer Service - Online</fullName>
                </value>
                <value>
                    <fullName>Dedicated Customer Service - Shared</fullName>
                </value>
                <value>
                    <fullName>Exclusive Space - Available</fullName>
                </value>
                <value>
                    <fullName>Exclusive Space - None</fullName>
                </value>
                <value>
                    <fullName>Exclusive Space - Select</fullName>
                </value>
                <value>
                    <fullName>Incentives - Available</fullName>
                </value>
                <value>
                    <fullName>Incentives - Limited</fullName>
                </value>
                <value>
                    <fullName>Incentives - Limited/None</fullName>
                </value>
                <value>
                    <fullName>Incentives - Offered</fullName>
                </value>
                <value>
                    <fullName>Incentives - Select</fullName>
                </value>
                <value>
                    <fullName>Incentives - X1</fullName>
                </value>
                <value>
                    <fullName>Incentives - X2</fullName>
                </value>
                <value>
                    <fullName>Incentives - X3</fullName>
                </value>
                <value>
                    <fullName>Pricing - Directionally Advantaged</fullName>
                </value>
                <value>
                    <fullName>Pricing - Directionally Discounted</fullName>
                </value>
                <value>
                    <fullName>Pricing - Directionally Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_OpportunitiesPlan__c</fullName>
        <description>Opportunities for the Account (not Opportunity object)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunities (Plan)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OverdelTolerance__c</fullName>
        <defaultValue>(0.35)</defaultValue>
        <label>Overdel. Tolerance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_POBox__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Parents_SAP_Customer_Number__c</fullName>
        <formula>Parent.PMC_SS_SAPCustomerNumber__c</formula>
        <label>Parent’s SAP Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PayerContact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_DG_PaymentTerms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Property_farm_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property/farm name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RUC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RUC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ReconciliationAccount__c</fullName>
        <description>Picklist value for Reconciliation Account</description>
        <label>Reconciliation Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>111001</fullName>
                    <label>A/R Non-Trade - External Receivables</label>
                </value>
                <value>
                    <fullName>110201</fullName>
                    <label>A/R Rec Account - Affiliate Trade Receivables</label>
                </value>
                <value>
                    <fullName>110003</fullName>
                    <label>A/R Rec Account - External Trade Receivables</label>
                </value>
                <value>
                    <fullName>110101</fullName>
                    <label>A/R Rec Account - Intercompany Trade Receivables</label>
                </value>
                <value>
                    <fullName>110104</fullName>
                    <label>AR Intercompany Other</label>
                </value>
                <value>
                    <fullName>244003</fullName>
                    <label>Downpayments from Customers</label>
                </value>
                <value>
                    <fullName>244005</fullName>
                    <label>Downpayments from Customers for Contracts</label>
                </value>
                <value>
                    <fullName>141019</fullName>
                    <label>Inter State AR Clearing A/C</label>
                </value>
                <value>
                    <fullName>111201</fullName>
                    <label>Load A/R Non-Trade - Affiliate Receivables</label>
                </value>
                <value>
                    <fullName>190002</fullName>
                    <label>Notes Rec - External LT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_RecordType__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <description>Stores Record Type of Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>States the Regional Manager</description>
        <label>Regional Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAPCustomerNumber__c</fullName>
        <description>The SAP Generated Customer Number</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>States the Sales Director</description>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>